--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
                                 <input type="text" class="form-control" name="area" id="area" placeholder="Enter area">
                             </div>
                             <div class="col-md-4 form-group" style="text-align:center">
-                                <label><b>Bedrooms</b></label>
+                                <label><b>Bedrooms(BHK)</b></label>
                                 <input type="text" class="form-control" name="bedrooms" id="bedrooms" placeholder="Enter bhk">
                             </div>
                             <div class="col-md-4 form-group" style="text-align:center">
